# make-cmake-example

./: readme.md
example/: CMakeLists.txt  makefile
